test_scripts/errors/compare_gt_type_error.stderr
 1 | "a" > 2;
         ^
Error: Cannot compare a and 2
